# netcalc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  libnetcalc.pc.in
.github/workflows/: ci.yml
src/: .gitignore  Makefile.am  ipv4calc.cpp  ipv4calc.h  ipv6_main.cpp  ipv6calc.cpp  ipv6calc.h  main.cpp  netcalc.cpp  netcalc.h  netcalc_build_config.h.in  netcalc_format.cpp  netcalc_format.h
tests/: CMakeLists.txt  Makefile.am  test_ipv4calc.cpp  test_ipv4calc_cli.cpp  test_ipv6calc.cpp  test_ipv6calc_cli.cpp  test_netcalc.cpp
